change project structre to our backend

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,8 +49,8 @@ html {
   /* Colors */
   --main-background: #ffffff;
   --main-black: #111318;
-  --main-color: #14b84b;
-  --low-color: #979797;
+  --main-color: #019733;
+  --low-color: #3b3b3b;
   --card-background: #fdfbf7;
   --accent-pink: #ff2d73;
   --second-bg: #faf7f0;
